--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @font-face{
     font-family: clock;
-    src: url('/font/technology.bold.ttf');
+    src: url('./font/technology.bold.ttf');
 }
 
 body {
@@ -17,36 +17,44 @@ body {
 #calculator {
     background-color: rgb(4, 5, 31);
     padding: 23px;
+    padding-top: 28px;
     width: 350px;
-    height: 500px;
+    min-height: 500px;
     display: flex;
     flex-direction: column;
     border-radius: 15px;
+    filter: drop-shadow(30px 20px 15px rgb(29, 29, 29));
 }
 
 #screen {
     background-color: rgb(0, 0, 86);
     width: 100%;
-    height: 100px;
-    margin: 10px 0 30px 0;
+    min-height: 100px;
+    padding: 5px;
+    padding-right: 7px;
+    box-sizing: border-box;
+    margin: 0 0 30px 0;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
     justify-content: end;
     align-items: end;
     font-family: "clock";
-    font-size: 40px;
+    font-size: 35px;
+    overflow: hidden;
 }
 
 #screen > h3 {
     margin: 0;
-    margin-right: 10px;
     padding: 0;
+    max-width: 100%;
+    word-wrap:break-word;
     color: rgba(0, 179, 0, 0.815)
 }
 
 #clearBtns {
     width: 100%;
+    min-height: 50px;
     display: flex;
     gap: 10px;
     margin-bottom: 15px;
@@ -60,12 +68,14 @@ body {
     border: 2px solid gray;
     border-radius: 7px;
     font-size: 25px;
+    transition: all 100ms;
 }
 
 #keyContainer {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    min-height: 305px;
     gap: 7px;
     flex-grow: 1;
 }
@@ -75,8 +85,15 @@ body {
     flex-grow: 1;
     color: rgb(218, 218, 218);
     background-color: rgb(67, 67, 67);
-    border: 2px solid gray;
+    border: 2px solid rgb(128, 128, 128);
     border-radius: 7px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
+    transition: all 100ms;
+}
+
+#keyContainer > button:active, #clearBtns > button:active {
+    background-color: rgb(47, 47, 47);
+    color: rgb(198, 198, 198);
+    border: 2px solid rgb(108, 108, 108);
 }
